--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,43 @@
 .App {
-	margin: 20px;
+	margin: auto;
+	width: 80%;
+}
+
+h1 {
+	margin: auto;
+	margin-top: 25px;
+	width: 50%;
+	text-align: center;
+}
+
+.subtitle {
+	margin: auto;
+	width: 50%;
+	text-align: center;
+}
+
+h3 {
+	margin-bottom: -1px;
+}
+
+.pin-choices {
+	margin-left: -3px;
 }
 
 button {
 	background-color: white;
 	padding: 7px 15px;
 	margin: 10px 3px;
-	border: 1px black solid;
+	border: 1px white solid;
 	border-radius: 5px;
 }
 
 button:hover {
-	background-color: black;
+	background-color: #003366;
+	color: white;
+}
+
+a {
 	color: white;
 }
 
@@ -21,11 +47,21 @@ button:hover {
 
 .frame {
 	display: grid;
-	grid-template-rows: 50% 50%;
+	grid-template-rows: 20% 40% 40%;
 	width: 100px;
-	height: 100px;
-	border: 1px black solid;
+	height: 120px;
+	border: 1px white solid;
 	margin-right: -1px;
+}
+
+.frame-number {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 12px;
+	font-weight: bold;
+	background-color: white;
+	color: #003366;
 }
 
 .frame-top-row {
@@ -41,7 +77,7 @@ button:hover {
 
 .turn-two {
 	display: flex;
-	border: 1px black solid;
+	border: 1px white solid;
 	margin: -1px;
 	justify-content: center;
 	align-items: center;
@@ -55,10 +91,10 @@ button:hover {
 
 .last-frame {
 	display: grid;
-	grid-template-rows: 50% 50%;
+	grid-template-rows: 20% 40% 40%;
 	width: 150px;
-	height: 100px;
-	border: 1px black solid;
+	height: 120px;
+	border: 1px white solid;
 	margin-right: -1px;
 }
 
@@ -74,7 +110,7 @@ button:hover {
 }
 
 .last-turn-two {
-	border: 1px black solid;
+	border: 1px white solid;
 	margin-top: -1px;
 	margin-right: -1px;
 	display: flex;
@@ -83,7 +119,7 @@ button:hover {
 }
 
 .last-turn-three {
-	border: 1px black solid;
+	border: 1px white solid;
 	margin-top: -1px;
 	margin-right: -2px;
 	display: flex;
@@ -98,4 +134,17 @@ button:hover {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.reset {
+	margin: auto;
+	width: 50%;
+	text-align: center;
+}
+
+footer {
+	margin: auto;
+	margin-top: 50px;
+	width: 50%;
+	text-align: center;
 }
