--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,15 @@
 .App {
-	margin: auto;
-	width: 80%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 h1 {
-	margin: auto;
 	margin-top: 25px;
-	width: 50%;
-	text-align: center;
 }
 
 .subtitle {
-	margin: auto;
-	width: 50%;
-	text-align: center;
+	margin-bottom: 50px;
 }
 
 h3 {
@@ -137,14 +133,10 @@ a {
 }
 
 .reset {
-	margin: auto;
-	width: 50%;
 	text-align: center;
 }
 
 footer {
-	margin: auto;
 	margin-top: 50px;
-	width: 50%;
 	text-align: center;
 }
